@@ -72,6 +72,7 @@ typedef struct SD_task {
   e_SD_task_state_t state;
   void *data;                   /* user data */
   char *name;
+  int kind;
   double amount;
   double remains;
   double start_time;
