@@ -60,6 +60,13 @@ SimGrid (3.3.4) unstable; urgency=low
  * SD_task_dependency_exists() can now cope with having one of its
    arguments NULL. If so, it tests whether the other argument has any 
    dependency.
+ * Introduce typed tasks. Specify its kind and cost at creation. 
+   At scheduling, just give where it should be placed, and the cost
+   for each involved resource is automatically computed.
+   Existing constructors so far (more to come of course):
+    - SD_task_create_comm_e2e() for end-to-end communication
+    - SD_task_create_comp_seq() for sequential computation
+   Use SD_task_schedulev() / SD_task_schedulel() to schedule them.
    
  Bug fixes:
  * GTNetS wrappers should now be usable again (and betterly tested too)
